Added TcpServer and UrlPArser

--- a/Assignment3/Assignment3.csproj
+++ b/Assignment3/Assignment3.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="TcpServer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="TcpServer.cs" />
+  </ItemGroup>
+
 </Project>
